# talensinki

./: .dockerignore  .gitignore  Dockerfile  README.md  devlog.md  docker-compose.yml  pyproject.toml  scrapbook.py
prompt_templates/system/: default_prompt.txt  poem_prompt.txt
src/talensinki/: __init__.py  checks.py  config.py  database.py  dev.py  gui.py  llm.py  main.py  pdf_chunking.py  rich_display.py  streamlit_app.py  templates.py  tui.py
tests/: test_database.py  test_templates.py
