[project]
name = "talensinki"
version = "0.1.0"
description = "chat with your local pdfs"
readme = "README.md"
authors = [{ name = "txart", email = "iurzainki@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "ipython>=9.4.0",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.4",
    "langchain-unstructured>=0.1.5",
    "langgraph>=0.5.2",
    "pypdf>=5.8.0",
    "pytest>=8.4.1",
    "streamlit>=1.47.0",
    "typer>=0.16.0",
    "unstructured[pdf]>=0.18.9",
]

[project.scripts]
talensinki = "talensinki.tui:app"
talensinki-gui = "talensinki.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
