[project]
name = "talensinki"
version = "0.1.1"
description = "chat with your local pdfs"
readme = "README.md"
authors = [{ name = "txart", email = "iurzainki@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.21.0",
    "chromadb>=1.0.15",
    "ipython>=9.4.0",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.4",
    "langchain-unstructured>=0.1.5",
    "langgraph>=0.5.2",
    "mypy>=1.17.0",
    "pypdf>=5.8.0",
    "pytest>=8.4.1",
    "streamlit>=1.47.0",
    "ty>=0.0.1a15",
    "typer>=0.16.0",
    "unstructured[pdf]>=0.18.9",
]

[project.scripts]
talensinki = "talensinki.tui:app"
talensinki-gui = "talensinki.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = ["src", "tests"]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
